--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
     <script src="js/popup.js"></script>
   </head>
   <body bgcolor="#e5e5e5">
-<div style="text-align: right;"><span style="color: #000000;"><a href="https://zirconet.wordpress.com/?s=WP+STATS%2C+come+ho+creato+la+mia+prima+Chrome+Extension+" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="https://zirconet.files.wordpress.com/2016/02/icon1282.png" alt="icon128" width="48" height="48" /></a></span></div>
+<div style="text-align: right;"><span style="color: #000000;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="https://zirconet.files.wordpress.com/2016/02/icon1282.png" alt="icon128" width="48" height="48" /></a></span></div>
 <div style="text-align: center;" id="version"></div>
 <div style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a></div>
 <br/>
