--- a/option.html
+++ b/option.html
@@ -9,7 +9,7 @@
 <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 <body>
 <hr />
-<h1 style="text-align: center;"><span style="color: #000080;"><a href="https://zirconet.wordpress.com/?s=WP+STATS%2C+come+ho+creato+la+mia+prima+Chrome+Extension+" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="https://zirconet.files.wordpress.com/2016/02/icon1282.png" alt="icon128" width="128" height="128" /></a></span></h1>
+<h1 style="text-align: center;"><span style="color: #000080;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="https://zirconet.files.wordpress.com/2016/02/icon1282.png" alt="icon128" width="128" height="128" /></a></span></h1>
 <h1 style="text-align: center;"><span style="color: #000080;">WP STATS</span></h1>
 <p style="text-align: center;"><em>(Not Another Chrome Extensions)</em></p>
 <h2 style="text-align: center;">Check easily visitor hits of your Wordpress.com site!</h2>
@@ -22,7 +22,17 @@
   <input size="30" id="www" value="https://"></input>
   </br>
   Insert Akismet secret code:
-  <input size="10" id="key"></input>
+  <input id="key"></input>
+  </br>
+  Choose label color:
+  <select id=clr>
+  <option value="#FE2E2E">Red</option>  
+  <option value="#4285F4" selected="selected">Blue</option>
+  <option value="#DF01D7">Purple</option>
+  <option value="#31B404">Green</option>
+  <option value="#D7DF01">Yellow</option>
+  <option value="#FAAC58">Orange</option>
+  </select>
   </br>
   </form>
 
