--- a/options.html
+++ b/options.html
@@ -16,6 +16,16 @@
   Insert Akismet secret code:
   <input id="key"></input>
   </br>
+  Choose label color:
+  <select id=clr>
+  <option value="#FE2E2E">Red</option>  
+  <option value="#4285F4">Blue</option>
+  <option value="#DF01D7">Purple</option>
+  <option value="#31B404">Green</option>
+  <option value="#D7DF01">Yellow</option>
+  <option value="#FAAC58">Orange</option>
+  </select>
+  </br>
   </form>
 
   <div id="status"></div>
