--- a/options.html
+++ b/options.html
@@ -16,15 +16,25 @@
   Insert Akismet secret code:
   <input id="key"></input>
   </br>
+  </br>
+  Choose total counter setup:
+  <select id=tmp>
+  <option value="days=1" selected="selected">Days</option>
+  <option value="days=7">Week</option>
+  <option value="month=1">Month</option>
+  </select>				 
+  </br>
+  </br>
   Choose label color:
   <select id=clr>
   <option value="#FE2E2E">Red</option>  
-  <option value="#4285F4">Blue</option>
+  <option value="#4285F4" selected="selected">Blue</option>
   <option value="#DF01D7">Purple</option>
   <option value="#31B404">Green</option>
   <option value="#D7DF01">Yellow</option>
   <option value="#FAAC58">Orange</option>
   </select>
+  </br>
   </br>
   </form>
 
