--- a/option.html
+++ b/option.html
@@ -9,8 +9,9 @@
 <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 <body>
 <hr />
-<h1 style="text-align: center;"><span style="color: #000080;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="https://zirconet.files.wordpress.com/2016/02/icon1282.png" alt="icon128" width="128" height="128" /></a></span></h1>
+<h1 style="text-align: center;"><span style="color: #000080;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="img/icon128.png" width="128" height="128"/></a></span></h1>
 <h1 style="text-align: center;"><span style="color: #000080;">WP STATS</span></h1>
+<div style="text-align: center;" id="version"></div>
 <p style="text-align: center;"><em>(Not Another Chrome Extensions)</em></p>
 <h2 style="text-align: center;">Check easily visitor hits of your Wordpress.com site!</h2>
 <p style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a> 2016</p>
@@ -24,6 +25,15 @@
   Insert Akismet secret code:
   <input id="key"></input>
   </br>
+  </br>
+  Choose total counter setup:
+  <select id=tmp>
+  <option value="days=1" selected="selected">Days</option>
+  <option value="days=7">Week</option>
+  <option value="month=1">Month</option>
+  </select>				 
+  </br>
+  </br>
   Choose label color:
   <select id=clr>
   <option value="#FE2E2E">Red</option>  
@@ -34,6 +44,7 @@
   <option value="#FAAC58">Orange</option>
   </select>
   </br>
+  </br>
   </form>
 
   <div id="status"></div>
@@ -43,7 +54,7 @@
   <script src="js/option.js"></script>
 <hr />
 <hr />
-<p><em>This page starts automatically after the first installation.</em></p>
-<p><em>To change the settings later, go to WP STAT icon on toolbar, click right button on mouse and choose Option on menu.</em></p>
+<p style="text-align: center;"><em>This page starts automatically after the first installation and any successive upgrade.<u>After an upgrade, you can ignore and skip this setup simply closing this page.</u></em></p>
+<p style="text-align: center;"><em>To change the settings later, go to <strong>WP STAT icon</strong> on toolbar, click right button on mouse and choose <strong>Option</strong> on menu.</em></p>
 </body>
 </html>
