--- a/popup.html
+++ b/popup.html
@@ -17,14 +17,21 @@
     </style>
     <script src="js/popup.js"></script>
   </head>
-  <body bgcolor="#e5e5e5">
-<div style="text-align: right;"><span style="color: #000000;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="https://zirconet.files.wordpress.com/2016/02/icon1282.png" alt="icon128" width="48" height="48" /></a></span></div>
+  <body background="img/bgimage.gif">
+<div style="text-align: right;"><span style="color: #000000;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 10px; margin-left: 10px; border: 0px solid #000000;" src="img/icon128.png" alt="icon128" width="48" height="48" /></a></span></div>
+&nbsp
 <div style="text-align: center;" id="version"></div>
-<div style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a></div>
-<br/>
+<div style="text-align: center;"><em>by Zirconet</em></a></div>
+<br>
 <hr />  
+<p align="center">
+<b>More stats</b>
+  <a href="stats.html">Click here!</a>
+</p>
+<hr /> 
 <div style="text-align: center;"><strong>WP STATS</strong></div>
 <div style="text-align: center;"> Perform every 180 sec.</div>
+
 <hr />
   </body>
 </html>
