--- a/update.html
+++ b/update.html
@@ -8,23 +8,51 @@
 </head>
 <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 <body>
+<script src="js/update.js"></script>
 <hr />
 <h1 style="text-align: center;"><span style="color: #000080;"><a href="https://chrome.google.com/webstore/detail/wordpress-stats/jcdnefhhiabcloefaejmgdihedgdeplg" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="img/updated.png"/></a></span></h1>
 <h1 style="text-align: center;"><span style="color: #000080;">WP STATS</span></h1>
 <div style="text-align: center;" id="version"></div>
 <p style="text-align: center;"><em>(Not Another Chrome Extensions)</em></p>
-<h2 style="text-align: center;">Check easily visitor hits of your Wordpress.com site!</h2>
+<h2 style="text-align: center;">Check easily who visit your Wordpress.com site!</h2>
 <p style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a> 2016</p>
 <hr />
 <hr />
-<p><strong>New version (1.5.8) changelog:</strong></p>
+<h2>Changelog:</h2>
+<p><strong>New version (1.5.9)</strong></p>
+<p>- implemented new MORE STATS POPUP showing current best posts and their visitors;</p>
+<p>- new background image.</p>
+<p style="text-align: center;"><img class="wp-image-21898 size-full alignnone" style="border: 0px solid #000000;" src="img/update/1-5-9/1.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-9/2.png"/></p>
+&nbsp
+<p><strong>ver. 1.5.8</strong></p>
 <p>- you can now set in Option total counter range (daily, weekly, monthly);</p>
 <p>- arranged new option.html page;</p>
 <p>- implemented detection Chrome extension first run / update;</p>
 <p>- created update.html page;</p>
 <p>- check delay now is every 180 sec.</p>
-
-<script src="js/update.js"></script>
+<p style="text-align: center;"><img class="wp-image-21898 size-full alignnone" style="border: 0px solid #000000;" src="img/update/1-5-8/1.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-8/2.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-8/3.png"/></p>
+&nbsp
+<p><strong>ver. 1.5.7</strong></p>
+<p>- now it is possible set in Option label color (red, blue, purple, green, yellow, orange).</p>
+<p style="text-align: center;"><img class="wp-image-21898 size-full alignnone" style="border: 0px solid #000000;" src="img/update/1-5-7/1.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-7/2.gif"/></p>
+&nbsp
+<p><strong>ver. 1.5.6</strong></p>
+<p>- changed label color in blue;</p>
+<p>- changed WP Stat url web site.</p>
+&nbsp
+<p><strong>ver. 1.5.0</strong></p>
+<p>- add popup;</p>
+<p>- autorun Option when install;</p>
+<p>- instant check saving setting;</p>
+<p>- instant check at the start.</p>
+&nbsp
+<p><strong>ver. 1.1.0</strong></p>
+<p>- add Option Popup;</p>
+<p>- add blink notification;</p>
+<p>- check delay 60s.</p>
+&nbsp
+<p><strong>ver. 1.0.0</strong></p>
+- extention complete.</p>
 </body>
 </html>
 
