--- a/popup.html
+++ b/popup.html
@@ -12,27 +12,40 @@
         white-space: pre;
         text-overflow: ellipsis;
         overflow: hidden;
-        max-width: 400px;
+        max-width: 1000px;
       }
     </style>
-    <script src="js/popup.js"></script>
+    <script src="js/stats.js"></script>
   </head>
   <body background="img/bgimage.gif">
-<div style="text-align: right;"><span style="color: #000000;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 10px; margin-left: 10px; border: 0px solid #000000;" src="img/icon128.png" alt="icon128" width="48" height="48" /></a></span></div>
-&nbsp
-<div style="text-align: center;" id="version"></div>
-<div style="text-align: center;"><em>by Zirconet</em></a></div>
-<br>
-<hr />  
-<p align="center">
-<b>More stats</b>
-  <a href="stats.html">Click here!</a>
-</p>
-<hr /> 
-<div style="text-align: center;"><strong>WP STATS</strong></div>
-<div style="text-align: center;"> Perform every 180 sec.</div>
-
+<div style="text-align: center;"><span style="color: #000000;"><a href="http://goo.gl/SaSGIw" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 175px; margin-left: 175px; border: 0px solid #000000;" src="img/icon128.png" alt="icon128" width="48" height="48" /></a></span> <b style="font-size: 155%">WP STATS </b><em style="font-size: 75%"></em></div>
+<p style="font-size: 125%"><b>Stats by post:</b> <em style="font-size: 75%">(today's top five)</em></p>
+<div style="font-size: 80%;text-align: left;font-weight: bold" id="rigawww"></div>
+<hr>
+<hr>
+<div style="font-size: 100%;text-align: left;" id="riga0"></div>
+<div style="font-size: 90%;text-align: left;font-weight: bold" id="valore0">calculing...</div>
+<hr>
+<div style="font-size: 100%;text-align: left;" id="riga1"></div>
+<div style="font-size: 90%;text-align: left;font-weight: bold" id="valore1"></div>
+<hr>
+<div style="font-size: 100%;text-align: left;" id="riga2"></div>
+<div style="font-size: 90%;text-align: left;font-weight: bold" id="valore2"></div>
+<hr>
+<div style="font-size: 100%;text-align: left;" id="riga3"></div>
+<div style="font-size: 90%;text-align: left;font-weight: bold" id="valore3"></div>
+<hr>
+<div style="font-size: 100%;text-align: left;" id="riga4"></div>
+<div style="font-size: 90%;text-align: left;font-weight: bold" id="valore4"></div>
 <hr />
+<hr />
+<a style="color: green;font-size: 80%" id="rigalink" target="_blank"></a> 
+<a style="color: white;">_______________</a>
+<a href="options.html"><img src="img/settings_green.png" width="24" height="24" alt='options' /></a>
+<a style="color: white;">___________________</a>
+<a style="color: green;font-size: 80%" href="credits.html">Privacy & Credits</a>
+<hr />
+<p style="color: darkgrey;font-weight: bold;text-align: center;font-size: 80%" >---*- (click over the window to close this popup) -*---</p>
   </body>
 </html>
 
