--- a/update.html
+++ b/update.html
@@ -18,41 +18,10 @@
 <p style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a> 2016</p>
 <hr />
 <hr />
-<h2>Changelog:</h2>
-<p><strong>New version (1.5.9)</strong></p>
-<p>- implemented new MORE STATS POPUP showing current best posts and their visitors;</p>
-<p>- new background image.</p>
-<p style="text-align: center;"><img class="wp-image-21898 size-full alignnone" style="border: 0px solid #000000;" src="img/update/1-5-9/1.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-9/2.png"/></p>
-&nbsp
-<p><strong>ver. 1.5.8</strong></p>
-<p>- you can now set in Option total counter range (daily, weekly, monthly);</p>
-<p>- arranged new option.html page;</p>
-<p>- implemented detection Chrome extension first run / update;</p>
-<p>- created update.html page;</p>
-<p>- check delay now is every 180 sec.</p>
-<p style="text-align: center;"><img class="wp-image-21898 size-full alignnone" style="border: 0px solid #000000;" src="img/update/1-5-8/1.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-8/2.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-8/3.png"/></p>
-&nbsp
-<p><strong>ver. 1.5.7</strong></p>
-<p>- now it is possible set in Option label color (red, blue, purple, green, yellow, orange).</p>
-<p style="text-align: center;"><img class="wp-image-21898 size-full alignnone" style="border: 0px solid #000000;" src="img/update/1-5-7/1.png"/><img class="wp-image-21898 size-full alignnone" style="margin-left: 100px; border: 0px solid #000000;" src="img/update/1-5-7/2.gif"/></p>
-&nbsp
-<p><strong>ver. 1.5.6</strong></p>
-<p>- changed label color in blue;</p>
-<p>- changed WP Stat url web site.</p>
-&nbsp
-<p><strong>ver. 1.5.0</strong></p>
-<p>- add popup;</p>
-<p>- autorun Option when install;</p>
-<p>- instant check saving setting;</p>
-<p>- instant check at the start.</p>
-&nbsp
-<p><strong>ver. 1.1.0</strong></p>
-<p>- add Option Popup;</p>
-<p>- add blink notification;</p>
-<p>- check delay 60s.</p>
-&nbsp
-<p><strong>ver. 1.0.0</strong></p>
-- extention complete.</p>
+&nbsp;
+&nbsp;
+<p style="text-align: center;font-size: 180%"><em>Congratulations! WP STATS has been successfully updated to version 1.6.1</em></p>
+<a style="text-align: center;font-size: 180%" href="http://cittadinoimperfetto.altervista.org/WP_Stats/update.html"><center>CHANGELOG</center></a>
 </body>
 </html>
 
