--- a/options.html
+++ b/options.html
@@ -40,7 +40,7 @@
 
   <div id="status"></div>
   <button id="save">Save</button>
-
+  <button id="close">Close</button>
   <script src="js/options.js"></script>
 </body>
 </html>
