--- a/credits.html
+++ b/credits.html
@@ -3,36 +3,59 @@
   <head>
     <title>WP STATS</title>
     <style>
-      body {
+      	body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 60%;
-      }
-      #status {
+      	}
+      	#status {
         /* avoid an excessively wide status text */
         white-space: pre;
         text-overflow: ellipsis;
         overflow: hidden;
         max-width: 400px;
-      }
+      	}
+	a {
+    	text-decoration: none; 
+    	font-weight: 600;
+    	color: #000000
+	}
+	a:hover {
+	text-decoration: none;
+    	color: #70b854
+	}
+	img:hover {
+  	content: attr(title);
+  	white-space: nowrap;
+  	-moz-border-radius: 5px;
+  	-webkit-border-radius: 5px;
+ 	 border-radius: 5px;
+  	-moz-box-shadow: 0px 0px 4px #333;
+  	-webkit-box-shadow: 0px 0px 4px #333;
+  	box-shadow: 0px 0px 4px #333;
+  	background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #eeeeee),color-stop(1, #cccccc));
+  	background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  	background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  	background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+  	background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+	}
     </style>
     <script src="js/popup.js"></script>
   </head>
   <body background="img/bgimage.gif">
 <div style="text-align: right;"><span style="color: #000000;"><a href="http://goo.gl/SaSGIw" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 10px; margin-left: 10px; border: 0px solid #000000;" src="img/icon128.png" alt="icon128" width="48" height="48" /></a></span></div>
 &nbsp
-<div style="text-align: center;" id="version"></div>
-<div style="text-align: center;"><em>by Zirconet</em></a></div>
+<div style="text-align: center;font-weight: 800;" id="version"></div>
+<div style="text-align: center;font-size: 80%;"><em>by Zirconet</em></a></div>
 <br>
 <hr />  
 <div style="text-align: center;"><strong>WP STATS</strong></div>
-<div style="text-align: center;"> Perform every 180 sec.</div>
+<div style="text-align: center;"> Perform every <br>180 sec.</div>
 <hr />  
 <p align="center">
-  <a href="http://goo.gl/1tILgR" target="_blank">Privacy Policy</a>
+  <a href="http://goo.gl/1tILgR" target="_blank">Go to<br>Privacy Policy<br>page</a>
 </p>
 <hr /> 
-<p></p> 
-<p style="color: darkgrey;text-align: center;font-size: 40%" >Click over the window to close</p>
   </body>
 </html>
 
