--- a/options.html
+++ b/options.html
@@ -27,7 +27,10 @@
   </br>
   Choose label color:
   <select id=clr>
-  <option value="#FE2E2E">Red</option>  
+  <option value="#d81d1d">Red</option>  
+  <option value="#000000">Black</option> 
+  <option value="#514949">Dark Grey</option> 
+  <option value="#a9a9a9">Light Grey</option>
   <option value="#4285F4" selected="selected">Blue</option>
   <option value="#DF01D7">Purple</option>
   <option value="#31B404">Green</option>
