--- a/update.html
+++ b/update.html
@@ -3,7 +3,18 @@
 <head>
   <title>WP Stats Options</title>
   <style>
-    body: { padding: 20px; }
+    	body: { 
+	padding: 20px; 
+	}
+	a {
+    	text-decoration: none; 
+    	font-weight: 600;
+    	color: #000080
+	}
+	a:hover {
+	text-decoration: none;
+    	color: #70b854
+	}	
   </style>
 </head>
 <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
@@ -11,17 +22,14 @@
 <script src="js/update.js"></script>
 <hr />
 <h1 style="text-align: center;"><span style="color: #000080;"><a href="https://chrome.google.com/webstore/detail/wordpress-stats/jcdnefhhiabcloefaejmgdihedgdeplg" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="img/updated.png"/></a></span></h1>
-<h1 style="text-align: center;"><span style="color: #000080;">WP STATS</span></h1>
+<h1 style="text-align: center;"><span style="color: #000080;">WP STATS</span><img style="margin-right: 15px; border: 0px solid #000000;" src="img/100.png" height="100" width="120"></h1>
 <div style="text-align: center;" id="version"></div>
-<p style="text-align: center;"><em>(Not Another Chrome Extensions)</em></p>
 <h2 style="text-align: center;">Check easily who visit your Wordpress.com site!</h2>
 <p style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a> 2016</p>
 <hr />
 <hr />
-&nbsp;
-&nbsp;
-<p style="text-align: center;font-size: 180%"><em>Congratulations! WP STATS has been successfully updated to version 1.6.1</em></p>
-<a style="text-align: center;font-size: 180%" href="http://cittadinoimperfetto.altervista.org/WP_Stats/update.html"><center>CHANGELOG</center></a>
+<p style="text-align: center;font-size: 180%">Congratulations!<br><a style="color: #000080; font-weight:bold"> WP STATS</a> has been successfully updated to NEW version <a style="color: #000080; font-weight:bold; font-size: 140%" id="version2"></a></p>
+<a style="text-align: center;font-size: 140%" href="http://cittadinoimperfetto.altervista.org/WP_Stats/update.html"><center>go to CHANGELOG</center></a>
 </body>
 </html>
 
