--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,9 @@
   	background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
   	background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 	}
-	img[alt]{font-weight:bold;}
+	img[alt]{
+	font-weight:bold;
+	}
     </style>
     <script src="js/stats.js"></script>
   </head>
