--- a/option.html
+++ b/option.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+ <head>
   <title>WP Stats Options</title>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
+  <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
   <style>
-    body: { padding: 20px; }
+    body: { 
+	padding: 20px; 
+	font-family: 'Roboto', sans-serif;
+          }
   </style>
-</head>
-<link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
+
+ </head>
+
+
 <body>
-<hr />
 <h1 style="text-align: center;"><span style="color: #000080;"><a href="http://wp.me/p7hWH-5It" target="_blank"><img class="wp-image-21898 size-full alignnone" style="margin-right: 15px; border: 0px solid #000000;" src="img/icon128.png" width="128" height="128"/></a></span></h1>
 <h1 style="text-align: center;"><span style="color: #000080;">WP STATS</span></h1>
 <div style="text-align: center;" id="version"></div>
-<p style="text-align: center;"><em>(Not Another Chrome Extensions)</em></p>
 <h2 style="text-align: center;">Check easily visitor hits of your Wordpress.com site!</h2>
 <p style="text-align: center;">by <a href="http://zirconet.wordpress.com" target="_blank">Zirconet</a> 2016</p>
 <hr />
 <hr />
   <form>
-  <h3>Please insert properly your setting:</h3>
-  Insert Wordpress.com  Site:
-  <input size="30" id="www" value="https://"></input>
+  <div><h3>Please insert properly your setting:</h3>
+  Insert Wordpress.com Blog Url:
+  <input size="76" id="www" value="https://"></input>
+  </div>
   </br>
-  Insert Akismet secret code:
-  <input id="key"></input>
+  Insert its Akismet API Key &nbsp&nbsp :&nbsp&nbsp&nbsp&nbsp&nbsp
+  <input id="key"></input>&nbsp&nbsp<button title="Akismet API Key is your personal secret code automatically generated for your blog. PUSH this button to find it. You will be redirected to Wordpress.com official pages. Then copy & paste it in the relevant WP STAT form field." id="help">If You need help, <b>push here</b> and You will be redirected </br> <b>to Wordpress.com Akismet key</b> official pages</button>
+  
   </br>
   </br>
-  Choose total counter setup:
+  <em>(Optional)</em> &nbsp - Choose total range counter setup:&nbsp&nbsp&nbsp
   <select id=tmp>
   <option value="days=1" selected="selected">Days</option>
   <option value="days=7">Week</option>
   <option value="month=1">Month</option>
   </select>				 
+
   </br>
-  </br>
-  Choose label color:
+  <em>(Optional)</em> &nbsp - Choose label background color:
   <select id=clr>
   <option value="#d81d1d">Red</option>  
   <option value="#000000">Black</option> 
@@ -52,12 +60,12 @@
 
   <div id="status"></div>
   <div style="color:#FF0000" id="alert"></div>
-  <button id="save">Save&Close</button>
+  <button id="save"><b>Save&Close</b></button>
 
   <script src="js/option.js"></script>
 <hr />
 <hr />
-<p style="text-align: center;"><em>This page starts automatically after the first installation and any successive upgrade.<u>After an upgrade, you can ignore and skip this setup simply closing this page.</u></em></p>
+<p style="text-align: center;"><em>This page starts automatically after the first installation and any successive upgrade. <u>After an upgrade, you can ignore and skip this setup simply closing this page.</u></em></p>
 <p style="text-align: center;"><em>To change the settings later, go to <strong>WP STAT icon</strong> on toolbar, click right button on mouse and choose <strong>Option</strong> on menu.</em></p>
 </body>
 </html>
