--- a/option.html
+++ b/option.html
@@ -10,6 +10,17 @@
 	padding: 20px; 
 	font-family: 'Roboto', sans-serif;
           }
+
+    .material {
+	padding: 5;
+	border-radius: 10px;
+
+	border: 1px;
+    	width: 500px;
+    	height: 70px;
+    	background-image: url(img/0material.png);
+    	background-repeat: no-repeat;
+	  }
   </style>
 
  </head>
@@ -30,7 +41,7 @@
   </div>
   </br>
   Insert its Akismet API Key &nbsp&nbsp :&nbsp&nbsp&nbsp&nbsp&nbsp
-  <input id="key"></input>&nbsp&nbsp<button title="Akismet API Key is your personal secret code automatically generated for your blog. PUSH this button to find it. You will be redirected to Wordpress.com official pages. Then copy & paste it in the relevant WP STAT form field." id="help">If You need help, <b>push here</b> and You will be redirected </br> <b>to Wordpress.com Akismet key</b> official pages</button>
+  <input id="key"></input>&nbsp&nbsp<button title="Akismet API Key is your personal secret code automatically generated for your blog. PUSH this button to find it. You will be redirected to Wordpress.com official pages. Then copy & paste it in the relevant WP STAT form field." id="help">If You need help, <b>push here</b> and You will be redirected to</br> <b>to Wordpress.com Akismet key</b> official pages</button>
   
   </br>
   </br>
@@ -57,6 +68,12 @@
   </br>
   </br>
   </form>
+
+  <div><button class="material" title="Open chrome://flags/#top-chrome-md" id="material"></button>
+</br>After jump set Material or No Material as you prefer. </div>
+ 
+ </div>
+ </br>	
 
   <div id="status"></div>
   <div style="color:#FF0000" id="alert"></div>
